# pcdc-aws-client

./: README.md  pyproject.toml  requirements.txt  requirments.txt
aws_client/: boto.py  pyproject.toml
aws_client/tests/: test_aws_client.py
pcdc-aws-client/tests/testfiles/: hello.txt
pcdc_aws_client/: boto.py  utils.py
src/awsclient/client/aws/: boto.py
tests/: aws-debug.py
