[tool.poetry]
name = "pcdc-aws-client"
version = "0.4.3"
description = "aws client"
authors = ["Paul Murdoch <paulmurdoch19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "*"
retry = "*"
cdiserrors = "*"
cdispyutils = "*"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
