[tool.poetry]
name = "pcdc-aws-client"
version = "1.2.2"
description = "aws client"
authors = ["D4CG <pcdc_root@lists.uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "*"
retry = "*"
cdiserrors = "*"
cdispyutils = "*"
html2text = "*"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
