[tool.poetry]
name = "pcdc-aws-client"
version = "1.2.2"
description = "aws client"
authors = ["D4CG <pcdc_root@lists.uchicago.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
boto3 = "^1.28.57"
retry = "0.9.2"
cdiserrors = "<2.0.0"
cdispyutils = "2.0.1"
html2text = "2020.1.16"

[tool.poetry.dev-dependencies]
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
