[tool.poetry]
name = "aws_client"
version = "0.1.0"
description = "client for aws api"
authors = ["Paul Murdoch <t-9pmurdo@uchicago.edu">]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
